src/test/ui/coherence/coherence-blanket-conflicts-with-blanket-unimplemented.stderr
error[E0119]: conflicting implementations of trait `MyTrait`:
  --> $DIR/coherence-blanket-conflicts-with-blanket-unimplemented.rs:30:1
   |
LL | impl<T:Even> MyTrait for T {
   | -------------------------- first implementation here
...
LL | impl<T:Odd> MyTrait for T { //~ ERROR E0119
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
